Topic list functionally complete.

--- a/public/css/nodeboard.css
+++ b/public/css/nodeboard.css
@@ -40,3 +40,9 @@ ul.nav {
 	color: #FFFFFF;
 	text-decoration: none;
 }
+
+table.topic-list {
+	width: 100%;
+	border: hidden;
+	border-collapse: collapse;
+}
