--- a/views/topic_list.jade
+++ b/views/topic_list.jade
@@ -14,3 +14,4 @@ block content
                 td= topic.username
                 td 0
                 td= topic.lastPostTime
+    a(href="/newtopic") New Topic
